debut mise en forme panels

--- a/trainline/index.html
+++ b/trainline/index.html
@@ -10,6 +10,10 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
+    <style>
+            @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900');
+            </style>
+
     <title>Trainline Mockup</title>
 
     <!-- Bootstrap core CSS -->
@@ -31,6 +35,8 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+   
   </head>
 
   <body>
@@ -57,16 +63,25 @@
         </div>
         </nav>
 
-    <div id="test" class="container">
+    <div id="main-block" class="container-fluid">
        <div class="container">
-        <h1>TEST</h1>    
+        <h1>Réservez vos billets de train. En France et en Europe.</h1> 
+        <p>Voyagez avec Trainline, leader indépendant de la vente de billets de train en Europe.</p> 
         
        </div>
+       <div id="ember"  class="container">
+           <div id="search-form" class="col-md-6">
+               <div class="panel">test</div>
+            </div>
 
-      <div >
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
+
+           <div id="petit-plus"class="col-md-6">
+                <div class="panel">test2</div> 
+           </div>
+
+       </div>
+
+     
 
     </div><!-- /.container -->
 
