dossier img/partners OK

--- a/trainline/index.html
+++ b/trainline/index.html
@@ -118,7 +118,41 @@
     <section>
 
       <div class="container" id="partners">
-
+        <div class="row">
+        <h3>Ils nous font confiance. Nous vendons leurs billets.</h3>
+      </div> 
+      <div class="row">
+        <div class="primary-partner">
+          <img class="pp-logo" src="img/partners/sncf.svg" alt="logo-sncf">
+        </div>
+        <div class="primary-partner">
+            <img class="pp-logo" src="img/partners/idtgv.svg" alt="logo-idtgv">
+        </div>
+        <div class="primary-partner">
+            <img class="pp-logo" src="img/partners/ouibus.svg" alt="logo-ouibus">
+        </div>
+        <div class="primary-partner">
+            <img class="pp-logo" src="img/partners/ouigo.svg" alt="logo-ouigo">
+        </div>
+        <div class="primary-partner">
+            <img class="pp-logo" src="img/partners/db.svg" alt="logo-db">
+        </div>
+        <div class="primary-partner">
+            <img class="pp-logo" src="img/partners/lyria.svg" alt="logo-lyria">
+        </div>
+        <div class="primary-partner">
+            <img class="pp-logo" src="img/partners/thalys.svg" alt="logo-thalys">
+        </div>
+      </div> 
+      <div class="row">
+          <div class="sec-partner">1</div>
+          <div class="sec-partner">2</div>
+          <div class="sec-partner">3</div>
+          <div class="sec-partner">4</div>
+          <div class="sec-partner">5</div>
+          <div class="sec-partner">6</div>
+          <div class="sec-partner">7</div>
+        </div>   
 
       </div>
 
