--- a/trainline/index.html
+++ b/trainline/index.html
@@ -135,7 +135,7 @@
             <img class="pp-logo" src="img/partners/ouigo.svg" alt="logo-ouigo">
         </div>
         <div class="primary-partner">
-            <img class="pp-logo" src="img/partners/db.svg" alt="logo-db">
+            <img class="pp-logo" src="img/partners/eurostar.png" alt="logo-eurostar">
         </div>
         <div class="primary-partner">
             <img class="pp-logo" src="img/partners/lyria.svg" alt="logo-lyria">
@@ -145,13 +145,26 @@
         </div>
       </div> 
       <div class="row">
-          <div class="sec-partner">1</div>
-          <div class="sec-partner">2</div>
-          <div class="sec-partner">3</div>
-          <div class="sec-partner">4</div>
-          <div class="sec-partner">5</div>
-          <div class="sec-partner">6</div>
-          <div class="sec-partner">7</div>
+          <div class="sec-partner">
+            <img src="img/partners/db.svg" alt="logo-db">
+          </div>
+          <div class="sec-partner">
+            <img src="img/partners/trenitalia.svg" alt="trenitalia-db">
+          </div>
+          <div class="sec-partner">
+            <img src="img/partners/renfe.svg" alt="logo-renfe">
+          </div>
+          <div class="sec-partner">
+            <img src="img/partners/thello.svg" alt="logo-thello">
+          </div>
+          <div class="sec-partner">
+            <img src="img/partners/italo.svg" alt="logo-italo">
+          </div>
+          <div class="sec-partner"><img src="img/partners/undefined.svg" alt="logo-undefined">
+          </div>
+          <div class="sec-partner">
+            <div class="sec-partner"><img src="img/partners/undefined.svg" alt="logo-undefined">
+          </div>
         </div>   
 
       </div>
