--- a/trainline/index.html
+++ b/trainline/index.html
@@ -169,14 +169,17 @@
 
       </div>
 
-      <div class="container">
-        <div class="col-md-6">
-          <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le
-            Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla
-            ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre
-            cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
-            Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem
-            Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
+      <div class="row">
+        <h2>Tous les billets. Un seul guichet.</h2>
+        <h3>Nous vendons tous les billets que vous avez l’habitude d’acheter en France 
+          et tous ceux dont vous pourriez avoir besoin à l’étranger.</h3>
+      </div>
+
+      <div class="container-fluid arguments">
+        <div class="col-md-6 arguments-illu" id="couple">
+          
+            <img src="img/couple.jpg" alt="">
+          
         </div>
         <div class="col-md-6">Bla</div>
 
