correction pb de balises et structure

--- a/trainline/index.html
+++ b/trainline/index.html
@@ -172,8 +172,9 @@
           </div>
 
         </div>
+      </div>
 
-        <div class="row">
+        <div class="container">
           <h2>Tous les billets. Un seul guichet.</h2>
           <h3>Nous vendons tous les billets que vous avez l’habitude d’acheter en France et tous ceux dont vous pourriez avoir
             besoin à l’étranger.</h3>
@@ -282,7 +283,7 @@
 
 
           </div>
-        </div>
+        
 
 
     </section>
