Structuration en sections

--- a/trainline/index.html
+++ b/trainline/index.html
@@ -43,18 +43,53 @@
 
 <body>
 
+  <div class="container-fluid">
 
 
-    <!-- Bootstrap core JavaScript
+
+    <div class="navbar"></div>  <!-- NAVBAR -->
+
+    <section id="booking"></section>
+
+
+    <section id="partners"></section>
+
+
+    <section id="argu"></section>
+
+    <section id="how-to"></section>
+
+
+    <section id="get-onboard"></section>
+
+
+    <section id="feedback"></section>
+
+    <footer></footer>
+
+
+
+
+
+
+
+
+
+
+  </div>
+  <!--MAIN CONTAINER FLUID-->
+
+
+  <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>
-      window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
-    </script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script>
+    window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
+  </script>
+  <script src="js/bootstrap.min.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 
 </html>
