booking form commencé

--- a/trainline/index.html
+++ b/trainline/index.html
@@ -47,10 +47,108 @@
 
 
 
-    <div class="navbar"></div>  <!-- NAVBAR -->
 
-    <section id="booking"></section>
 
+    <section class="container-fluid" id="booking">
+      <div class=" container-fluid navigation">
+        <div class="col-md-6">image</div>
+        <div class="col-md-6">ul</div>
+      </div>
+      <!-- NAVBAR -->
+
+      <div class="container">
+        <h1>Réservez vos billets de train. En France et en Europe. </h1>
+        <p>Voyagez avec Trainline, leader indépendant de la vente de billets de train en Europe.</p>
+      </div>
+
+
+      <div class="container">
+        <div class="col-md-6">
+          <form action="">
+            <div class="form-group">
+              <label class="form-control-label" for="travel-choice">Quel est votre trajet ?</label>
+              <input type="text" class="form-control" id="gareDepart" placeholder="Saisissez votre gare de départ...">
+              <input type="text" class="form-control" id="gareArrivee" placeholder="Saisissez votre gare d'arrivée...">
+
+            </div>
+
+            <div class="form-group">
+
+              <input type="text" class="form-control" id="aller" placeholder="Aller">
+              <input type="text" class="form-control" id="retour" placeholder="Retour">
+
+            </div>
+
+            <div class="form-group">
+
+            <input class="form-control col-md-10" type="text" placeholder="1 Adulte (26/59)" readonly>
+            <input class="form-control col-md-2" type="text" placeholder="+" readonly>
+          </div>
+
+          
+
+          
+          </form>
+
+         <p>allo</p>
+
+        </div>
+
+
+            <div class="col-sm-3">
+              <label class="sr-only" for="inlineFormInputName">Name</label>
+              <input type="text" class="form-control mb-2 mb-sm-0" id="inlineFormInputName" placeholder="Jane Doe">
+            </div>
+            <div class="col-sm-3">
+              <label class="sr-only" for="inlineFormInputGroupUsername">Username</label>
+              <div class="input-group mb-2 mb-sm-0">
+                <div class="input-group-addon">@</div>
+                <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Username">
+              </div>
+            </div>
+
+
+        <div class="col-md-6">
+
+          <p>Les petits plus de trainline</p>
+          <div class="row">
+            <div class="col-md-2">test</div>
+            <div class="col-md-10">test</div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-2">test</div>
+            <div class="col-md-10">test</div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-2">test</div>
+            <div class="col-md-10">test</div>
+          </div>
+
+          <div class="row">
+            <p>Distributeur agrée</p>
+          </div>
+
+          <div class="row">
+            <div class="col-md-3">1</div>
+            <div class="col-md-3">2</div>
+            <div class="col-md-3">3</div>
+            <div class="col-md-3">4</div>
+          </div>
+
+
+
+
+        </div>
+      </div>
+      <div clas="container"></div>
+
+
+
+
+
+    </section>
 
     <section id="partners"></section>
 
