all sections skel OK

--- a/trainline/index.html
+++ b/trainline/index.html
@@ -276,10 +276,61 @@
     </section>
 
 
-    <section id="get-onboard"></section>
+    <section id="get-onboard">
+
+<div class="container-fluid">
+  <div class="container">
+    <h2>Montez à bord !</h2>
+    <div class="col-md-12">
+      <p>Arrêtez de vous prendre la tête. Prenez le train.</p>
+    </div>
+    <div class="col-md-12">
+      <button class="btn-primary">Réservez un billet</button>
+    </div>
+
+  </div>
+</div>
+
+    </section>
 
 
-    <section id="feedback"></section>
+
+
+    <section id="feedback">
+
+
+
+<div class="container">
+  <div class="col-md-12">
+    <h2>Demandez conseil à nos utilisateurs.</h2>
+  </div>
+  <div class="col-md-12">
+    <p>Tout le marketing du monde ne remplacera jamais ce que nos utilisateurs 
+      disent de nous. C'est encore eux qui parlent le mieux de notre service.</p>
+  </div>
+  <div class="col-md-4">4</div>
+  <div class="col-md-4">4</div>
+  <div class="col-md-4">4</div>
+
+  <div class="col-md-4 col-md-offset-4"><a href="#">Plus d'amour</a></div>
+
+  <div class="col-md-12">
+    12
+  </div>
+  
+
+
+
+
+
+</div>
+
+
+
+
+
+
+    </section>
 
     <footer></footer>
 
