solution pour aligner les éléments dans #how-to

--- a/trainline/index.html
+++ b/trainline/index.html
@@ -319,7 +319,9 @@
             <img src="img/paypal.svg" alt="paypal">
           </div>
           <div class="col-md-12">
-ggds
+            <p>Nous soignons et sécurisons vos achats 
+              comme s’ils n’avaient pas de prix.</p>
+            
           </div>
 
         </div>
@@ -338,7 +340,9 @@ ggds
           <div class="col-md-5">
             <img src="img/etickets.svg" alt="etickets">
           </div>
-          <div class="col-md-12">ff</div>
+          <div class="col-md-12">
+           <p>Vous obtenez un billet cartonné à retirer en gare 
+              ou un e-billet à imprimer chez vous.</p> </div>
 
         </div>
 
