--- a/trainline/index.html
+++ b/trainline/index.html
@@ -363,7 +363,7 @@
             <p>Arrêtez de vous prendre la tête. Prenez le train.</p>
           </div>
           <div class="col-md-12">
-            <button class="btn-primary">Réservez un billet</button>
+            <button class="btn">Réservez un billet</button>
           </div>
 
         </div>
@@ -386,9 +386,19 @@
           <p>Tout le marketing du monde ne remplacera jamais ce que nos utilisateurs disent de nous. C'est encore eux qui parlent
             le mieux de notre service.</p>
         </div>
-        <div class="col-md-4">4</div>
-        <div class="col-md-4">4</div>
-        <div class="col-md-4">4</div>
+        <div class="tweet col-md-4">
+            <blockquote class="twitter-tweet" data-lang="fr"><p lang="fr" dir="ltr">Nouvelle commande de billets TGV via <a href="https://twitter.com/trainline_fr">@trainline_fr</a>, un plaisir à chaque fois d’utiliser ce site web ! Simple, efficace et rapide</p>&mdash; adrien gabriel (@gabrieladrien) <a href="https://twitter.com/gabrieladrien/status/868028751870914560">26 mai 2017</a></blockquote>
+            <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            
+        </div>
+        <div class="col-md-4">
+            <blockquote class="twitter-tweet" data-lang="fr"><p lang="fr" dir="ltr">Heureusement <a href="https://twitter.com/trainline_fr">@trainline_fr</a> est là pour trouver des solutions. Merci &lt;3 <a href="https://twitter.com/hashtag/TGVMax?src=hash">#TGVMax</a> <a href="https://twitter.com/SNCF">@SNCF</a></p>&mdash; Maribiulait (@Biunoctium) <a href="https://twitter.com/Biunoctium/status/864885777519583236">17 mai 2017</a></blockquote>
+            <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+        <div class="col-md-4">
+            <blockquote class="twitter-tweet" data-conversation="none" data-lang="fr"><p lang="fr" dir="ltr">&quot;Mozart, jeune compositeur prodige dont le dernier album a été très remarqué par les Inrocks.&quot;<br>Vos billets de blog sont toujours drôles 😄</p>&mdash; Cécile (@_Azaliz) <a href="https://twitter.com/_Azaliz/status/862752087406456832">11 mai 2017</a></blockquote>
+            <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
 
         <div class="col-md-4 col-md-offset-4"><a href="#">Plus d'amour</a></div>
 
