--- a/trainline/index.html
+++ b/trainline/index.html
@@ -383,10 +383,10 @@
           <h2>Demandez conseil à nos utilisateurs.</h2>
         </div>
         <div class="col-md-12">
-          <p>Tout le marketing du monde ne remplacera jamais ce que nos utilisateurs disent de nous. C'est encore eux qui parlent
+          <p>Tout le marketing du monde ne remplacera jamais ce que nos utilisateurs disent de nous. <br>C'est encore eux qui parlent
             le mieux de notre service.</p>
         </div>
-        <div class="tweet col-md-4">
+        <div class="col-md-4">
             <blockquote class="twitter-tweet" data-lang="fr"><p lang="fr" dir="ltr">Nouvelle commande de billets TGV via <a href="https://twitter.com/trainline_fr">@trainline_fr</a>, un plaisir à chaque fois d’utiliser ce site web ! Simple, efficace et rapide</p>&mdash; adrien gabriel (@gabrieladrien) <a href="https://twitter.com/gabrieladrien/status/868028751870914560">26 mai 2017</a></blockquote>
             <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
             
@@ -396,11 +396,11 @@
             <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
         <div class="col-md-4">
-            <blockquote class="twitter-tweet" data-conversation="none" data-lang="fr"><p lang="fr" dir="ltr">&quot;Mozart, jeune compositeur prodige dont le dernier album a été très remarqué par les Inrocks.&quot;<br>Vos billets de blog sont toujours drôles 😄</p>&mdash; Cécile (@_Azaliz) <a href="https://twitter.com/_Azaliz/status/862752087406456832">11 mai 2017</a></blockquote>
+            <blockquote class="twitter-tweet" data-cards="hidden" data-lang="fr"><p lang="fr" dir="ltr">Merci <a href="https://twitter.com/trainline_fr">@trainline_fr</a> pour la mise à jour avec les infos en temps réel ! Vos notifications sont encore plus utiles :) <a href="https://t.co/BpZDPJsT7g">pic.twitter.com/BpZDPJsT7g</a></p>&mdash; Baudouin Feildel (@AMDG2) <a href="https://twitter.com/AMDG2/status/870523164526166016">2 juin 2017</a></blockquote>
             <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
 
-        <div class="col-md-4 col-md-offset-4"><a href="#">Plus d'amour</a></div>
+        <div class="col-md-4 col-md-offset-4"><a href="#">Plus d'amour...</a></div>
 
         <div class="col-md-12">
           <ul>
@@ -582,6 +582,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script id="twitter-wjs" type="text/javascript" async defer src="https://platform.twitter.com/widgets.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
       window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
