#argu header styled

--- a/trainline/index.html
+++ b/trainline/index.html
@@ -92,9 +92,11 @@
       <!-- NAVBAR -->
 
 
-      <div class="container">
-        <h1>Réservez vos billets de train. En France et en Europe. </h1>
+      <div class="container-fluid">
+        <div class="container">
+        <h2>Réservez vos billets de train. En France et en Europe. </h2>
         <p>Voyagez avec Trainline, leader indépendant de la vente de billets de train en Europe.</p>
+      </div>
       </div>
       <!--headline Réservez -->
 
@@ -269,12 +271,14 @@
 
     <section id="argu">
 
-      <div class="container">
-        <h1>Tous les billets. Un seul guichet.</h1>
+      <div class="container-fluid">
+        <div class="container">
+        <h2>Tous les billets. Un seul guichet.</h2>
         <p>
           Nous vendons tous les billets que vous avez l’habitude d’acheter en France et tous ceux dont vous pourriez avoir besoin à
           l’étranger.
         </p>
+      </div>
       </div>
 
       <div class="container-fluid">
