--- a/trainline/index.html
+++ b/trainline/index.html
@@ -328,6 +328,8 @@
 
 
         <div class="col-md-6">
+        
+       <div class="col-md-8 col-md-offset-4 payment">  
           <h3>Paiement</h3>
           <div class="col-md-5">
             <img src="img/cards.svg" alt="credit-cards">
@@ -340,6 +342,7 @@
             <p>Nous soignons et sécurisons vos achats comme s’ils n’avaient pas de prix.</p>
 
           </div>
+        </div> 
 
         </div>
 
@@ -348,6 +351,8 @@
 
 
         <div class="col-md-6">
+
+         <div class="col-md-8 tickets">
 
           <h3>Billets</h3>
           <div class="col-md-5">
@@ -360,6 +365,7 @@
           <div class="col-md-12">
             <p>Vous obtenez un billet cartonné à retirer en gare ou un e-billet à imprimer chez vous.</p>
           </div>
+        </div> 
 
         </div>
 
