envoi travaux 1er Projet :-(

--- a/deliveroo/index.html
+++ b/deliveroo/index.html
@@ -35,197 +35,257 @@
 <body>
 
   <div class="container-fluid">
-
+    <!--header -->
+    <section>
+      <div>
+        <a>logo</a>
+        <li class="page-header--nav-list"><a href="#" class="page-header--nav-link page-header--button">Connexion </a></li>
+      </div>
+    </section>
+    <!--bandeau -->
     <section class="container-fluid ">
       <div class="row bandeau">
         <div class="part1G col-md-6">
-          <p>logo</p>
-          <p>lorepsum</p>
-          <p>lorepsum</p>
-          <p>lorepsum</p>
+          <h1>Vos restaurants préférés, </br>livrés en moins de 30</br>minutes.</h1>
+          <input>Saisissez votre adresse</input>
         </div>
 
         <div class="part1D col-md-6">
-          <p>connexion</p>
-          <p>logo</p>
+          <img src="https://deliveroo.fr/assets/images/sparrow/roo.svg"></img>
         </div>
 
       </div>
     </section>
+    <!--aLacarte -->
+    <div class="container aLaCarte">
+      <div class="col-md-12">
+        <h1> A la Carte</h1>
+      </div>
+      <div class="row">
+        <div class="col-md-4 imgCart4">
+          <div class="container-fluid">
+            <img src="img/file.jpg" class="col-md-12" alt=""></img>
 
-    <section class="container aLaCarte">
-
-      <p class="col-md-12"> A la Carte</p>
-            <div class="row ">
-                  <p class="col-md-4">img</p>
-                  <p class="col-md-4">plat</p>
-                  <p class="col-md-4">lien</p>
+            <div class="descIma">
+              <p>Crème de la crème</p>
             </div>
-            <div class="row ">
-                <p class="col-md-8">img</p>
-                <p class="col-md-8">plat</p>
-                <p class="col-md-8">lien</p>
+            <span class="">Pour impressionner votre rencard ou fêter un anniversaire, marquez le coup avec un repas spécial.</span></br>
+            <span class="">Voir Crème de la crème→</span>
           </div>
-      <p class="col-md-8">plat</p>
-      <p class="col-md-4">lien</p>
-      <p class="col-md-8">lien</p>
-      <p class="col-md-8">img</p>
-      <p class="col-md-4">img</p>
-      <p class="col-md-8">plat</p>
-      <p class="col-md-4">plat</p>
-      <p class="col-md-8">lien</p>
-      <p class="col-md-4">lien</p>
-      <p class="col-md-4">img</p>
-      <p class="col-md-8">img</p>
-      <p class="col-md-4">plat</p>
-      <p class="col-md-8">plat</p>
-      <p class="col-md-4">lien</p>
-      <p class="col-md-8">lien</p>
-      <p class="col-md-12"> exclusif</p>
-      <p class="col-md-12"> ailleurs</p>
-      <p class="col-md-12"> lienDEL</p>
-    </section>
+        </div>
+        <div class=" col-md-8 imgCart8">
+          <div class="container-fluid">
+            <img src="img/file (1).jpg" class="col-md-12" alt=""></img>
 
-    <section class="container-fluid lesRestaurants">
-      <p class="col-md-12"> vous aimez</p>
-      <p class="col-md-4">img</p>
-      <p class="col-md-4">img</p>
-      <p class="col-md-4">img</p>
-      <p class="col-md-4">nomR</p>
-      <p class="col-md-4">nomR</p>
-      <p class="col-md-4">nomR</p>
-      <p class="col-md-4">descR</p>
-      <p class="col-md-4">descR</p>
-      <p class="col-md-4">descR</p>
-      <p class="col-md-4">img</p>
-      <p class="col-md-4">img</p>
-      <p class="col-md-4">img</p>
-      <p class="col-md-4">nomR</p>
-      <p class="col-md-4">nomR</p>
-      <p class="col-md-4">nomR</p>
-      <p class="col-md-4">descR</p>
-      <p class="col-md-4">descR</p>
-      <p class="col-md-4">descR</p>
-      <p class="col-md-4">img</p>
-      <p class="col-md-4">img</p>
-      <p class="col-md-4">img</p>
-      <p class="col-md-4">nomR</p>
-      <p class="col-md-4">nomR</p>
-      <p class="col-md-4">nomR</p>
-      <p class="col-md-4">descR</p>
-      <p class="col-md-4">descR</p>
-      <p class="col-md-4">descR</p>
+            <p class="descIma">Plaisirs Coupables</p>
+          </div>
+          <div>
+            <span class="">Rendez l'ordinaire extraordinaire : la comfort food à son maximum. Allez, vous le méritez bien !</span></br>
+            <span class="">Voir Plaisirs Coupables→</span>
+          </div>
+        </div>
 
-    </section>
-    <section class=" container-fluid option">
-      <p class="col-md-12"> option</p>
-      <p class="col-md-2">bouf</p>
-      <p class="col-md-2">bouf</p>
-      <p class="col-md-2">bouf</p>
-      <p class="col-md-2">bouf</p>
-      <p class="col-md-4">bouf</p>
-      <p class="col-md-2">bouf</p>
-      <p class="col-md-2">bouf</p>
-      <p class="col-md-2">bouf</p>
-      <p class="col-md-2">bouf</p>
-      <p class="col-md-4">bouf</p>
-      <p class="col-md-2">bouf</p>
-      <p class="col-md-2">bouf</p>
-      <p class="col-md-2">bouf</p>
-      <p class="col-md-6">bouf</p>
-    </section>
-    <section class=" container-fluid ttCho">
+        <div class="col-md-8 imgCart8">
+          <div class="container-fluid">
+            <img src="img/file (2).jpg" class="col-md-12" alt=""></img>
 
-      <p class="col-md-12"> tout cho</p>
+            <div class="descIma">
+              <p>Equilibés et Délicieux</p>
+            </div>
+            <span class="">Pas besoin de rendre votre régime douloureux. Ces plats équilibrés et sains vont vous redonner le sourire !</span></br>
+            <span class="">Voir Equilibés et Délicieux→</span>
+          </div>
+        </div>
+        <div class=" col-md-4 imgCart4">
+          <div class="container-fluid">
+            <img src="img/file (3).jpg" class="col-md-12" alt=""></img>
 
-      <div class="part2G col-md-6">
-        <p>img</p>
+            <p class="descIma">Grands plaisirs,petits</br>prix</p>
+          </div>
+          <div>
+            <span class="">Se régaler est une affaire de tous les jours. Une sélection validée par votre porte-monnaie.</span></br>
+            <span class="">Voir Grands plaisirs,petits prix→</span>
+          </div>
+        </div>
+        <div class="col-md-4 imgCart4">
+          <div class="container-fluid">
+            <img src="img/file (4).jpg" class="col-md-12" alt=""></img>
+
+            <div class="descIma">
+              <p>Dessert et Douceurs</p>
+            </div>
+            <span class="">Qui a dit que les desserts et le goûter étaient réservés aux enfants ? Certainement pas nous.</span>
+            <span class="">Voir Dessert et Douceurs→</span>
+          </div>
+        </div>
+        <div class=" col-md-8 imgCart8">
+          <div class="container-fluid">
+            <img src="img/file (5).jpg" class="col-md-12" alt=""></img>
+
+            <p class="descIma">Pépites de Quartier</p>
+          </div>
+          <div>
+            <span class="">Découvrez la sélection gourmande de notre équipe experte et passionnée.</span>
+            <span class="">Voir Pépites de Quartier→</span>
+          </div>
+        </div>
+        <div class="col-md-12 imgCart12">
+          <div class="container-fluid">
+            <img src="img/file (6).jpg" class="col-md-12" alt=""></img>
+
+            <p class="descIma">Exclusivement sur Deliveroo</p>
+          </div>
+          <div>
+            <span class=""><span class="collection-tag-tiles__link">Du plus pointu au repaire de quartier, vous ne les trouverez nulle part ailleurs.</span>
+            <span class="">Voir Exclusivement sur Deliveroo →</span>
+          </div>
+
+        </div>
       </div>
+    </div>
 
-      <div class="part2D col-md-6">
-        <p>buisness</p>
+  </div>
+  <!--Restaurants -->
+  <section class="container-fluid lesRestaurants">
+    <h2 class="col-md-12"> vous aimez</h2>
+    <p class="col-md-4">img</p>
+    <p class="col-md-4">img</p>
+    <p class="col-md-4">img</p>
+    <p class="col-md-4">nomR</p>
+    <p class="col-md-4">nomR</p>
+    <p class="col-md-4">nomR</p>
+    <p class="col-md-4">descR</p>
+    <p class="col-md-4">descR</p>
+    <p class="col-md-4">descR</p>
+    <p class="col-md-4">img</p>
+    <p class="col-md-4">img</p>
+    <p class="col-md-4">img</p>
+    <p class="col-md-4">nomR</p>
+    <p class="col-md-4">nomR</p>
+    <p class="col-md-4">nomR</p>
+    <p class="col-md-4">descR</p>
+    <p class="col-md-4">descR</p>
+    <p class="col-md-4">descR</p>
+    <p class="col-md-4">img</p>
+    <p class="col-md-4">img</p>
+    <p class="col-md-4">img</p>
+    <p class="col-md-4">nomR</p>
+    <p class="col-md-4">nomR</p>
+    <p class="col-md-4">nomR</p>
+    <p class="col-md-4">descR</p>
+    <p class="col-md-4">descR</p>
+    <p class="col-md-4">descR</p>
+
+  </section>
+  <section class=" container-fluid option">
+    <p class="col-md-12"> option</p>
+    <p class="col-md-2">bouf</p>
+    <p class="col-md-2">bouf</p>
+    <p class="col-md-2">bouf</p>
+    <p class="col-md-2">bouf</p>
+    <p class="col-md-4">bouf</p>
+    <p class="col-md-2">bouf</p>
+    <p class="col-md-2">bouf</p>
+    <p class="col-md-2">bouf</p>
+    <p class="col-md-2">bouf</p>
+    <p class="col-md-4">bouf</p>
+    <p class="col-md-2">bouf</p>
+    <p class="col-md-2">bouf</p>
+    <p class="col-md-2">bouf</p>
+    <p class="col-md-6">bouf</p>
+  </section>
+  <section class=" container-fluid ttCho">
+
+    <p class="col-md-12"> tout cho</p>
+
+    <div class="part2G col-md-6">
+      <p>img</p>
+    </div>
+
+    <div class="part2D col-md-6">
+      <p>buisness</p>
+      <p>lorepsum</p>
+      <p>lien</p>
+    </div>
+    <div class="part3G col-md-6">
+      <p>app</p>
+      <p>lorepsum</p>
+      <p class="col-md-4">appStr</p>
+      <p class="col-md-4">gooStr</p>
+    </div>
+    <div class="part3D col-md-6">
+      <p>img</p>
+    </div>
+  </section>
+  <section class="container-fluid">
+    <p class="col-md-12">Work</p>
+    <div class="col-md-4">
+      <p>img</p>
+      <div class="container-fluid col-md-12">
+        <p>boss</p>
         <p>lorepsum</p>
         <p>lien</p>
       </div>
-      <div class="part3G col-md-6">
-        <p>app</p>
+    </div>
+    <div class="col-md-4">
+      <p>img</p>
+      <div class="container-fluid col-md-12">
+        <p>boss</p>
         <p>lorepsum</p>
-        <p class="col-md-4">appStr</p>
-        <p class="col-md-4">gooStr</p>
-      </div>
-      <div class="part3D col-md-6">
-        <p>img</p>
-      </div>
-    </section>
-    <section class="container-fluid">
-      <p class="col-md-12">Work</p>
-      <div class="col-md-4">
-        <p>img</p>
-        <div class="container-fluid col-md-12">
-          <p>boss</p>
-          <p>lorepsum</p>
-          <p>lien</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <p>img</p>
-        <div class="container-fluid col-md-12">
-          <p>boss</p>
-          <p>lorepsum</p>
-          <p>lien</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <p>img</p>
-        <div class="container-fluid col-md-12">
-          <p>boss</p>
-          <p>lorepsum</p>
-          <p>lien</p>
-        </div>
-      </div>
-    </section>
-    <section class="container-fluid">
-      <div class="col-md-3">
-        <div class="container-fluid col-md-12">
-          <p>blog</p>
-          <p>lorepsum</p>
-          <p>lorepsum</p>
-          <p>lien</p>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="container-fluid col-md-12">
-          <p>blog</p>
-          <p>lorepsum</p>
-          <p>lorepsum</p>
-          <p>lien</p>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="container-fluid col-md-12">
-          <p>blog</p>
-          <p>lorepsum</p>
-          <p>lorepsum</p>
-          <p>lien</p>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="container-fluid col-md-12">
-          <p>blog</p>
-          <p>lorepsum</p>
-          <p class="col-md-12">appStr</p>
-          <p class="col-md-12">gooStr</p>
-        </div>
-      </div>
-    </section>
-    <section>
-      <div class="reseau col-md-3">
         <p>lien</p>
       </div>
-      <div class="reseau col-md-offset-6 col-md-3">
-        <p>cpy</p>
+    </div>
+    <div class="col-md-4">
+      <p>img</p>
+      <div class="container-fluid col-md-12">
+        <p>boss</p>
+        <p>lorepsum</p>
+        <p>lien</p>
       </div>
-    </section>
+    </div>
+  </section>
+  <section class="container-fluid">
+    <div class="col-md-3">
+      <div class="container-fluid col-md-12">
+        <p>blog</p>
+        <p>lorepsum</p>
+        <p>lorepsum</p>
+        <p>lien</p>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="container-fluid col-md-12">
+        <p>blog</p>
+        <p>lorepsum</p>
+        <p>lorepsum</p>
+        <p>lien</p>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="container-fluid col-md-12">
+        <p>blog</p>
+        <p>lorepsum</p>
+        <p>lorepsum</p>
+        <p>lien</p>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="container-fluid col-md-12">
+        <p>blog</p>
+        <p>lorepsum</p>
+        <p class="col-md-12">appStr</p>
+        <p class="col-md-12">gooStr</p>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="reseau col-md-3">
+      <p>lien</p>
+    </div>
+    <div class="reseau col-md-offset-6 col-md-3">
+      <p>cpy</p>
+    </div>
+  </section>
   </div>
   <!-- main fluid-->
 
